Harmony - fix border for OIB.

This bug only appears for the certain bubbles because it is only
visually apparent when the margins are set to zero. I'm not sure
why we're setting this extra background. It's probably my fault.

BUG=649355

Review-Url: https://codereview.chromium.org/2363403003
Cr-Commit-Position: refs/heads/master@{#421267}

Former-commit-id: b8be177f507ce4abbb43fbc537e81f96a2219783