ui/views/bubble/bubble_dialog_delegate.cc
@@ -6,6 +6,7 @@
 
 #include "build/build_config.h"
 #include "ui/accessibility/ax_view_state.h"
+#include "ui/base/material_design/material_design_controller.h"
 #include "ui/base/resource/resource_bundle.h"
 #include "ui/gfx/color_utils.h"
 #include "ui/gfx/geometry/rect.h"
@@ -294,7 +295,11 @@ void BubbleDialogDelegateView::UpdateColorsFromTheme(
     const ui::NativeTheme* theme) {
   if (!color_explicitly_set_)
     color_ = theme->GetSystemColor(ui::NativeTheme::kColorId_BubbleBackground);
-  set_background(Background::CreateSolidBackground(color()));
+  // The background color is handled by the BubbleFrameView, so it shouldn't be
+  // necessary to set the color on |this|. I am cowardly leaving it in place for
+  // pre-MD bubbles in case this is necessary for some reason.
+  if (!ui::MaterialDesignController::IsSecondaryUiMaterial())
+    set_background(Background::CreateSolidBackground(color()));
   BubbleFrameView* frame_view = GetBubbleFrameView();
   if (frame_view)
     frame_view->bubble_border()->set_background_color(color());
